--- a/static/src/sass/config/_config.scss
+++ b/static/src/sass/config/_config.scss
@@ -2,6 +2,10 @@
 
 $header-pre-height: 34px;
 $header-height: 78px;
+$header-height-tablet: 70px;
+$header-height-mobile: 70px;
+$sidenav-width-tablet: 450px;
+$sidenav-width-mobile: 300px;
 
 // Home
 
