--- a/static/src/sass/modules/_all.scss
+++ b/static/src/sass/modules/_all.scss
@@ -3,6 +3,7 @@
 @import "navs/nav-header";
 @import "navs/nav-footer";
 @import "navs/nav-tree";
+@import "sidebar";
 
 // Boxes
 @import 'boxes/article-box';
