--- a/static/src/sass/modules/navs/_nav-actions.scss
+++ b/static/src/sass/modules/navs/_nav-actions.scss
@@ -43,4 +43,54 @@ $module: ".nav-actions";
 
     }
 
+    //
+    // Sidenav overrides
+    //
+    .sidebar & {
+
+        @include padding(0.5 1);
+        text-align: left;
+
+        &__item {
+            display: block;
+            @include margin(0 0 .5 0);
+
+            &:nth-child(2):after {
+                display: none;
+            }
+        }
+
+        &__item-link {
+            color: black;
+            @include font-size(l);
+
+            &:hover {
+                color: black;
+            }
+        }
+
+        &:before {
+
+            display: block;
+            content: "";
+            background: #979797;
+            width: 240px;
+            height: 1px;
+            @include margin(0 0 1.5 0);
+
+        }
+
+        &:after {
+
+            display: block;
+            content: "";
+            background: black;
+            width: 240px;
+            height: 6px;
+            @include margin(1.5 0 .5 0);
+
+        }
+
+    }
+
 }
