--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
     {% compress css %}
     <link rel="stylesheet" href="{% static "vendors/font-awesome/css/font-awesome.css" %}">
     <link rel="stylesheet" href="{% static "vendors/lightslider/dist/css/lightslider.css" %}">
+    <link rel="stylesheet" href="{% static "vendors/pushy/css/pushy.css" %}">
     <link rel="stylesheet" href="{% static "css/index.min.css" %}">
     {% endcompress %}
 
@@ -42,98 +43,62 @@
 
 <body id="{% block body_id %}body{% endblock %}" class="{% block body_class %}{% endblock %}">
     {% spaceless %}
-    <div class="banner" role="banner">
-        <div class="header">
-            <div class="header__pre">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-10 col-md-push-1 tac">
-                            {% page_menu "pages/menus/action.html" %}
-                        </div>
-                        <div class="col-md-1 col-md-push-1 tar">
-                            {% if settings.USE_MODELTRANSLATION and languages|length > 1 %}
-                                {% nevercache %}
-                                {% include "includes/language_selector.html" %}
-                                {% endnevercache %}
-                                <ul class="lang-switcher" id="langSelector">
-                                    {% for language in languages %}
-                                        {% if language.code == LANGUAGE_CODE %}
-                                            <li class="lang-switcher__item active">
-                                                <a href="#">
-                                                  {{ language.code|title }}
-                                                </a>
-                                            </li>
-                                        {% endif %}
-                                    {% endfor %}
-                                    {% for language in languages %}
-                                        {% if language.code != LANGUAGE_CODE %}
-                                            <li class="lang-switcher__item">
-                                                <a href="#" data-lang="{{ language.code }}">
-                                                  {{ language.code|title }}
-                                                </a>
-                                            </li>
-                                        {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row header__nav">
-                    <div class="col-md-12 tac">
-                        {% page_menu "pages/menus/header.html" %}
-                    </div>
-                </div>
-                {% if not on_home %}
-                    <div class="row white-bg">
-                        <div class="col-md-8 col-md-push-2">
-                            <ul class="breadcrumb">
-                                {% spaceless %}
-                                {% block breadcrumb_menu %}{% page_menu "pages/menus/breadcrumb.html" %}{% endblock %}
-                                {% endspaceless %}
-                            </ul>
-                        </div>
-                    </div>
-                {% endif %}
-            </div>
-        </div>
+
+    <div class="pushy pushy-left">
+
+        {% include "includes/sidebar.html" %}
 
     </div>
 
-    {% if on_home %}
-        {% include "includes/slider.html" %}
-    {% endif %}
+    <div class="site-overlay">
 
-    <main class="main" role="main">
-        {% block content_header %}{% endblock %}
-        {% block main %}{% endblock %}
-        {% block content_footer %}{% endblock %}
-    </main>
+    </div>
 
-    <footer class="footer" role="footer">
+    <div class="header push">
 
-        <div class="footer__pre">
+        <div class="header__pre">
 
             <div class="container">
 
                 <div class="row">
 
-                    <div class="col-sm-6 col-sm-push-1 tal-sm tac-sm tal-xs">
+                    <div class="col-md-10 col-md-push-1 tac">
 
-                        newsletter
+                        {% page_menu "pages/menus/action.html" %}
 
                     </div>
+                    <div class="col-md-1 col-md-push-1 tar">
 
-                    <div class="col-sm-3 col-sm-push-1 tac-sm tal-xs">
+                        {% if settings.USE_MODELTRANSLATION and languages|length > 1 %}
+                            {% nevercache %}
+                            {% include "includes/language_selector.html" %}
+                            {% endnevercache %}
+                            <ul class="lang-switcher" id="langSelector">
 
-                        <a class="footer__follow-link facebook" href="https://www.facebook.com/iIRCAM/" target="_blank" title="{% trans 'Follow us on Facebook' %}"><i class="fa fa-facebook-square"></i></a>
-                        <a class="footer__follow-link twitter" href="https://twitter.com/ircam" target="_blank" title="{% trans 'Follow us on Twitter' %}"><i class="fa fa-twitter-square"></i></a>
-                        <a class="footer__follow-link instagram" href="https://www.instagram.com/ircam_paris/" target="_blank" title="{% trans 'Follow us on Instagram' %}"><i class="fa fa-instagram"></i></a>
-                        <a class="footer__follow-link youtube" href="https://www.youtube.com/user/Ircam75" target="_blank" title="{% trans 'Follow us on Youtube' %}"><i class="fa fa-youtube-square"></i></a>
-                        <a class="footer__follow-link vimeo" href="https://vimeo.com/ircam" target="_blank" title="{% trans 'Follow us on Vimeo' %}"><i class="fa fa-vimeo-square"></i></a>
+                                {% for language in languages %}
+                                    {% if language.code == LANGUAGE_CODE %}
+                                        <li class="lang-switcher__item active">
 
+                                            <a href="#">
+                                              {{ language.code|title }}
+                                            </a>
+
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                                {% for language in languages %}
+                                    {% if language.code != LANGUAGE_CODE %}
+                                        <li class="lang-switcher__item">
+
+                                            <a href="#" data-lang="{{ language.code }}">
+                                              {{ language.code|title }}
+                                            </a>
+
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
                     </div>
 
                 </div>
@@ -142,109 +107,73 @@
 
         </div>
 
-        <div class="footer__content">
+        <div class="container">
 
-            <div class="container">
+            <div class="row header__nav">
 
-                <div class="row">
+                <div class="col-md-12 tac">
 
-                    <div class="col-xs-3 col-sm-3 col-sm-push-1 tal">
-
-                        <a href="{% url "home" %}" title="{% trans 'Home' %}"><img src="{% static "img/logo-ircam-white.png" %}" width="151" /></a>
-
-                    </div>
-
-                    <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
-
-                        <strong>IRCAM</strong><br />
-                        <br />
-                        1 Place Igor-Stravinsky<br />
-                        75004 Paris<br />
-                        t. +33 1 44 78 48 43
-
-                    </div>
-
-                    <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
-
-                        <strong>{% trans 'Opening times' %}</strong><br />
-                        <br />
-                        du lundi au vendredi<br />
-                         09:30–19:00<br />
-                        fermé le samedi et dimanche
-
-                    </div>
-
-                    <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
-
-                        <strong>{% trans 'Subway access' %}</strong><br />
-                        <br />
-                        Hôtel de Ville, Rambuteau,<br />
-                        Châtelet, Les Halles
-
+                    <div id="navHeader">
+                        {% page_menu "pages/menus/header.html" %}
                     </div>
 
                 </div>
 
-                <div class="row">
+            </div>
+            {% if not on_home %}
+                <div class="row white-bg">
 
-                    <div class="col-sm-10 col-sm-push-1">
+                    <div class="col-md-8 col-md-push-2">
 
-                        <div class="footer__separator"></div>
+                        <ul class="breadcrumb">
 
-                    </div>
+                            {% spaceless %}
+                            {% block breadcrumb_menu %}{% page_menu "pages/menus/breadcrumb.html" %}{% endblock %}
+                            {% endspaceless %}
 
-                </div>
-
-                <div class="row">
-
-                    <div class="col-xs-4 col-sm-3 col-sm-push-1 tal">
-
-                        {% page_menu "pages/menus/footer_vertical.html" %}
-
-                    </div>
-
-                    <div class="col-xs-4 col-sm-5 col-sm-push-1 tal">
-
-                        <strong>Institut de Recherche et Coordination Acoustique/Musique</strong> {% trans 'under the tutelage of' %} :<br />
-                        <br />
-                        <a href="http://www.culturecommunication.gouv.fr/" target="_blank" title="Ministère de la Culture et de la Communication"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-ministere-culture.png" %}" /></a>
-                        <a href="http://www.cnrs.fr/" target="_blank" title="Centre National de la Recherche Scientifique"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-cnrs.png" %}" /></a>
-                        <a href="http://www.upmc.fr/" target="_blank" title="Université Pierre et Marie Curie"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-upmc.png" %}" /></a>
-                        <a href="http://www.inria.fr/" target="_blank" title="Inria"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-inria.png" %}" /></a>
-
-                    </div>
-
-                    <div class="col-xs-4 col-sm-2 col-sm-push-1 tal">
-
-                        {% trans 'go to' %} :
-                        <ul class="unstyled-list">
-                            <li>
-                                <a class="footer__link" href="https://www.centrepompidou.fr/" target="_blank" title="Centre Pompidou">Centre Pompidou</a>
-                            </li>
-                            <li>
-                                <a class="footer__link" href="http://www.bpi.fr/home.html" target="_blank" title="Bibliothèque Public d’Information">Bibliothèque Public d’Information</a>
-                            </li>
                         </ul>
 
                     </div>
 
                 </div>
+            {% endif %}
+        </div>
 
-                <div class="row">
+    </div>
 
-                    <div class="col-sm-10 col-sm-push-1">
+    <div id="container">
 
-                        <div class="footer__separator footer__seprator--small"></div>
+        <main class="main" role="main">
 
-                    </div>
+            {% block content_header %}{% endblock %}
+            {% block main %}{% endblock %}
+            {% block content_footer %}{% endblock %}
 
-                </div>
+        </main>
 
-                <div class="row">
+        <footer class="footer" role="footer">
 
-                    <div class="col-sm-10 col-sm-push-1">
+            <div class="footer__pre">
 
-                        {% page_menu "pages/menus/footer_horizontal.html" %}
+                <div class="container">
+
+                    <div class="row">
+
+                        <div class="col-sm-6 col-sm-push-1 tal-sm tac-sm tal-xs">
+
+                            newsletter
+
+                        </div>
+
+                        <div class="col-sm-3 col-sm-push-1 tac-sm tal-xs">
+
+                            <a class="footer__follow-link facebook" href="https://www.facebook.com/iIRCAM/" target="_blank" title="{% trans 'Follow us on Facebook' %}"><i class="fa fa-facebook-square"></i></a>
+                            <a class="footer__follow-link twitter" href="https://twitter.com/ircam" target="_blank" title="{% trans 'Follow us on Twitter' %}"><i class="fa fa-twitter-square"></i></a>
+                            <a class="footer__follow-link instagram" href="https://www.instagram.com/ircam_paris/" target="_blank" title="{% trans 'Follow us on Instagram' %}"><i class="fa fa-instagram"></i></a>
+                            <a class="footer__follow-link youtube" href="https://www.youtube.com/user/Ircam75" target="_blank" title="{% trans 'Follow us on Youtube' %}"><i class="fa fa-youtube-square"></i></a>
+                            <a class="footer__follow-link vimeo" href="https://vimeo.com/ircam" target="_blank" title="{% trans 'Follow us on Vimeo' %}"><i class="fa fa-vimeo-square"></i></a>
+
+                        </div>
 
                     </div>
 
@@ -252,9 +181,121 @@
 
             </div>
 
-        </div>
+            <div class="footer__content">
 
-    </footer>
+                <div class="container">
+
+                    <div class="row">
+
+                        <div class="col-xs-3 col-sm-3 col-sm-push-1 tal">
+
+                            <a href="{% url "home" %}" title="{% trans 'Home' %}"><img src="{% static "img/logo-ircam-white.png" %}" width="151" /></a>
+
+                        </div>
+
+                        <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
+
+                            <strong>IRCAM</strong><br />
+                            <br />
+                            1 Place Igor-Stravinsky<br />
+                            75004 Paris<br />
+                            t. +33 1 44 78 48 43
+
+                        </div>
+
+                        <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
+
+                            <strong>{% trans 'Opening times' %}</strong><br />
+                            <br />
+                            du lundi au vendredi<br />
+                         09:30–19:00<br />
+                            fermé le samedi et dimanche
+
+                        </div>
+
+                        <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
+
+                            <strong>{% trans 'Subway access' %}</strong><br />
+                            <br />
+                            Hôtel de Ville, Rambuteau,<br />
+                            Châtelet, Les Halles
+
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-sm-10 col-sm-push-1">
+
+                            <div class="footer__separator"></div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-xs-4 col-sm-3 col-sm-push-1 tal">
+
+                            {% page_menu "pages/menus/footer_vertical.html" %}
+
+                        </div>
+
+                        <div class="col-xs-4 col-sm-5 col-sm-push-1 tal">
+
+                            <strong>Institut de Recherche et Coordination Acoustique/Musique</strong> {% trans 'under the tutelage of' %} :<br />
+                            <br />
+                            <a href="http://www.culturecommunication.gouv.fr/" target="_blank" title="Ministère de la Culture et de la Communication"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-ministere-culture.png" %}" /></a>
+                            <a href="http://www.cnrs.fr/" target="_blank" title="Centre National de la Recherche Scientifique"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-cnrs.png" %}" /></a>
+                            <a href="http://www.upmc.fr/" target="_blank" title="Université Pierre et Marie Curie"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-upmc.png" %}" /></a>
+                            <a href="http://www.inria.fr/" target="_blank" title="Inria"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-inria.png" %}" /></a>
+
+                        </div>
+
+                        <div class="col-xs-4 col-sm-2 col-sm-push-1 tal">
+
+                            {% trans 'go to' %} :
+                            <ul class="unstyled-list">
+                                <li>
+                                    <a class="footer__link" href="https://www.centrepompidou.fr/" target="_blank" title="Centre Pompidou">Centre Pompidou</a>
+                                </li>
+                                <li>
+                                    <a class="footer__link" href="http://www.bpi.fr/home.html" target="_blank" title="Bibliothèque Public d’Information">Bibliothèque Public d’Information</a>
+                                </li>
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-sm-10 col-sm-push-1">
+
+                            <div class="footer__separator footer__seprator--small"></div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-sm-10 col-sm-push-1">
+
+                            {% page_menu "pages/menus/footer_horizontal.html" %}
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </footer>
+
+    </div>
 
     {% include "includes/search_form.html" %}
     {% include "includes/footer_scripts.html" %}
