--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
           </div>
       </li>
       <li class="home__menu-item">
-          <a href="#" title="{% trans "Brief" %}">{% trans "Brief" %}</a>
+          <a href="#" title="{% trans "Brief" %}">{% trans "Briefs" %}</a>
           <div class="home__shutter">
               <div class="home__shutter-content">
                   <div class="container-fluid tal">
@@ -46,7 +46,7 @@
           </div>
       </li>
       <li class="home__menu-item">
-          <a href="#" title="{% trans "Media" %}">{% trans "Media" %}</a>
+          <a href="#" title="{% trans "Media" %}">{% trans "Medias" %}</a>
       </li>
     </ul>
 
