--- a/static/src/sass/modules/_all.scss
+++ b/static/src/sass/modules/_all.scss
@@ -5,6 +5,9 @@
 @import "navs/nav-tree";
 @import "sidebar";
 
+// Medias
+@import "medias/audio-playlist";
+
 // Boxes
 @import 'boxes/article-box';
 @import 'boxes/page-box';
