--- a/templates/core/inc/slider.html
+++ b/templates/core/inc/slider.html
@@ -4,7 +4,7 @@
         {% for image in slider_images %}
             <li class="slider-page__slide">
                 <div class="slider-page__wrapper">
-                    <img title="{{ image.title }}" alt="{{ image.title }} {{ image.description }} {{ image.credits }}" class="slider-page__img" src="{{ MEDIA_URL}}{% thumbnail image.file 0 520 %}" alt="" /><br />
+                    <img title="{{ image.title }}" alt="{{ image.title }} {{ image.description }} {{ image.credits }}" class="slider-page__img" src="{{ MEDIA_URL}}{% thumbnail image.file 0 520 %}" alt="" />
                     <div class="slider-page__caption">
                         {{ image.title }}
                         {% if image.description %}
@@ -13,6 +13,22 @@
                         {% if image.credits %}
                             | {{ image.credits }}
                         {% endif %}
+                    </div>
+                </div>
+            </li>
+        {% endfor %}
+        {% for video in videos %}
+            <li class="slider-page__slide">
+                <div class="slider-page__wrapper">
+                    <div class="slider-page__video">
+                        <video controls class="video-js vjs-ircam-skin" data-setup='{"aspectRatio":"905:520"}' {% if video.poster_url %}poster="{{ video.poster_url }}"{% endif %}>
+                            <source src="{{ video.closed_source_url }}" type="{{ video.closed_source_mime_type }}">
+                            <source src="{{ video.open_source_url }}" type="{{ video.open_source_mime_type }}">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <div class="slider-page__caption">
+                        {{ video.title }}
                     </div>
                 </div>
             </li>
