--- a/templates/includes/footer_scripts.html
+++ b/templates/includes/footer_scripts.html
@@ -8,6 +8,9 @@
     <script src="{% static "vendors/lightslider/dist/js/lightslider.js" %}"></script>
     <script src="{% static "vendors/imagesloaded/imagesloaded.pkgd.js" %}"></script>
     <script src="{% static "vendors/pushy/js/pushy.js" %}"></script>
+    <script src="{% static "vendors/video.js/dist/video.js" %}"></script>
+    <script src="{% static "vendors/videojs-playlist/dist/videojs-playlist.js" %}"></script>
+    <script src="{% static "vendors/audiojs/audiojs/audio.js" %}"></script>
     <script src="{% static "js/index.min.js" %}"></script>
 {% block extra_js %}{% endblock %}
 {% editable_loader %}
