--- a/templates/core/inc/block.html
+++ b/templates/core/inc/block.html
@@ -1,30 +1,25 @@
 {% load i18n mezzanine_tags keyword_tags pages_tags organization_tags %}
 {% if blocks %}
-    <div class="white-bg pb2">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <hr class="mt0" />
-                    {% for block in blocks %}
-                        {% if block.background_color %}
-                          color style : {{ block.background_color }}
-                        {% endif %}
-                        <div class="row" data-summary-content>
-                            <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
-                                {% if not forloop.first and block.with_separator %}
-                                    <hr />
-                                {% endif %}
-                                <h2 class="dotted">{{ block.title }}</h2>
-                                {% if block.content %}
-                                     {{ block.content|richtext_filters|safe }}
-                                {% else %}
-                                    {% lorem 3 p %}
-                                {% endif %}
-                            </div>
+    <div class="white-bg pb2 ">
+        <hr class="mt0" />
+        {% for block in blocks %}
+            <div class="page__block{% if block.background_color %} page__block--{{ block.background_color }}{% endif %}">
+                <div class="container">
+                    <div class="row" data-summary-content>
+                        <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
+                            {% if not forloop.first and block.with_separator %}
+                                <hr />
+                            {% endif %}
+                            <h2 class="dotted">{{ block.title }}</h2>
+                            {% if block.content %}
+                                 {{ block.content|richtext_filters|safe }}
+                            {% else %}
+                                {% lorem 3 p %}
+                            {% endif %}
                         </div>
-                    {% endfor %}
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endfor %}
     </div>
 {% endif %}
