--- a/templates/core/inc/audio.html
+++ b/templates/core/inc/audio.html
@@ -8,7 +8,10 @@
         <li class="audio-playlist__item">
             <a href="#" data-src="{{ audio.open_source_url }}">{{ audio.title }}</a>
         </li>
-        
+        <li class="audio-playlist__item">
+            <a href="#" data-src="{{ audio.open_source_url }}">{{ audio.title }}</a>
+        </li>
+
         {% comment %}
 
             {# audio.title #}<br>
