--- a/templates/magazine/topic/topic_detail.html
+++ b/templates/magazine/topic/topic_detail.html
@@ -61,12 +61,12 @@
 
     <div class="container">
         <div class="row">
-            {% for article in topic.articles.all %}
+            {% for article in articles %}
                 <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
                     {% include 'magazine/article/includes/article_card.html' %}
                 </div>
             {% endfor %}
         </div>
     </div>
-
+    {% pagination_for articles %}
 {% endblock %}
